--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.tourguide=DEBUG
+logging.level.tourguide=INFO
 logging.level.org.springframework=INFO
 logging.file=application.log
 spring.http.log-request-details=false
