--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-logging.level.tourguide=INFO
+logging.level.tourguide=DEBUG
 logging.level.org.springframework=INFO
 logging.file=application.log
 spring.http.log-request-details=false
+gps.ribbon.listOfServers=http://localhost:8080
