--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.org.springframework=INFO
 logging.file=application.log
 spring.http.log-request-details=false
 gps.ribbon.listOfServers=http://localhost:8080
+trip.ribbon.listOfServers=http://localhost:8080
+reward.ribbon.listOfServers=http://localhost:8080
