--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=tourguide
 logging.level.tourguide=DEBUG
 logging.level.org.springframework=INFO
 logging.file=application.log
