--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,6 @@ bootJar {
 
 repositories {
     mavenCentral()
-    flatDir {
-        dirs 'libs'
-    }
 }
 
 sourceCompatibility = 1.8
@@ -45,10 +42,8 @@ dependencies {
     compile group: 'org.javamoney', name: 'moneta', version: '1.3'
 	compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
 	compile group: 'tripmaster', name : 'common', version : '1.0' 
-
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	
-    compile(name:'TripPricer', ext:'jar')
-    
     testCompile("junit:junit")
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.6.RELEASE'
 }
