--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=tourguide
-logging.level.tourguide=DEBUG
-logging.level.org.springframework=INFO
-logging.file=application.log
-spring.http.log-request-details=false
+logging.level.root=DEBUG
+logging.file=tourguide.application.log
+spring.http.log-request-details=true
 gps.ribbon.listOfServers=http://localhost:8081
 reward.ribbon.listOfServers=http://localhost:8082
 trip.ribbon.listOfServers=http://localhost:8083
