--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,6 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: "jacoco"
 
-bootJar {
-    baseName = 'tourguide'
-    version =  '1.0.0'
-}
-
 repositories {
     mavenCentral()
 }
@@ -41,7 +36,7 @@ dependencies {
     compile 'io.github.openfeign:feign-jackson'
     compile group: 'org.javamoney', name: 'moneta', version: '1.3'
 	compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
-	compile group: 'tripmaster', name : 'common', version : '1.0' 
+	compile group: 'tripmaster', name : 'common', version : '1.0.0' 
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	
     testCompile("junit:junit")
@@ -79,4 +74,10 @@ jacocoTestCoverageVerification {
       }
     }
   }
+}
+
+bootJar {
+    baseName = 'tourguide'
+    version =  '1.0.0'
+	mainClassName = 'tripmaster.tourguide.Application'
 }
