performance tests run again

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,5 @@ spring.application.name=tourguide
 logging.level.root=DEBUG
 logging.file=tourguide.application.log
 spring.http.log-request-details=true
-gps.ribbon.listOfServers=http://localhost:8081
-reward.ribbon.listOfServers=http://localhost:8082
-trip.ribbon.listOfServers=http://localhost:8083
-
+feign.client.config.default.connectTimeout=3600000
+feign.client.config.default.readTimeout=3600000
