--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=tourguide
-logging.level.root=DEBUG
+logging.level.root=INFO
 logging.file=tourguide.application.log
-spring.http.log-request-details=true
+spring.http.log-request-details=false
 feign.client.config.default.connectTimeout=3600000
 feign.client.config.default.readTimeout=3600000
